fix cke editor and footer z-index

--- a/src/app/components/question/question.component.scss
+++ b/src/app/components/question/question.component.scss
@@ -16,7 +16,7 @@ $mat-remove-button-background-color: rgb(244, 67, 54);
 			margin-bottom: 2vh;
 		}
 		.question-editor {
-			width: 90vw;
+			width: 1000px;
 			::ng-deep .ck-editor__editable {
 				min-height: 200px;
 			}
